--- a/freelance_web_app/apps/auth_register_user/templates/register/base.html
+++ b/freelance_web_app/apps/auth_register_user/templates/register/base.html
@@ -1,12 +1,16 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    
+    <title>Django app</title>
+    <link rel="">
 </head>
 <body>
 {% block body%}
-
+<title> Test title</title>
+    
 {% endblock %}
 </body>
 </html>
