--- a/freelance_web_app/apps/auth_register_user/templates/register/register_tmpl.html
+++ b/freelance_web_app/apps/auth_register_user/templates/register/register_tmpl.html
@@ -1,1 +1,66 @@
-{% extends 'register/base.html' %}
+{% extends 'base/base_tmpl.html' %}
+{% block body%}
+<div class="bg-light py-3 py-md-5">
+  <div class="container">
+    <div class="row justify-content-md-center">
+      <div class="col-12 col-md-11 col-lg-8 col-xl-7 col-xxl-6">
+        <div class="bg-white p-4 p-md-5 rounded shadow-sm">
+          <div class="row">
+            <div class="col-12">
+              <div class="mb-5">
+                <h2 class="h3">Registration</h2>
+                <h3 class="fs-6 fw-normal text-secondary m-0">Enter your details to register</h3>
+              </div>
+            </div>
+          </div>
+          <form action="#">
+            <div class="row gy-3 gy-md-4 overflow-hidden">
+              <div class="col-12">
+                <label for="firstName" class="form-label">First Name <span class="text-danger">*</span></label>
+                <input type="email" class="form-control" name="firstName" id="firstName" placeholder="First Name" required>
+              </div>
+              <div class="col-12">
+                <label for="lastName" class="form-label">Last Name <span class="text-danger">*</span></label>
+                <input type="email" class="form-control" name="lastName" id="lastName" placeholder="Last Name" required>
+              </div>
+              <div class="col-12">
+                <label for="email" class="form-label">Email <span class="text-danger">*</span></label>
+                <input type="email" class="form-control" name="email" id="email" placeholder="name@example.com" required>
+              </div>
+              <div class="col-12">
+                <label for="password" class="form-label">Password <span class="text-danger">*</span></label>
+                <input type="password" class="form-control" name="password" id="password" value="" required>
+              </div>
+              <div class="col-12">
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" value="" name="iAgree" id="iAgree" required>
+                  <label class="form-check-label text-secondary" for="iAgree">
+                    I agree to the <a href="#" class="link-primary text-decoration-none">terms and conditions</a>
+                  </label>
+                </div>
+              </div>
+              <div class="col-12">
+                <div class="d-grid">
+                  <button class="btn btn-lg btn-primary" type="submit">Sign up</button>
+                </div>
+              </div>
+            </div>
+          </form>
+          <div class="row">
+            <div class="col-12">
+              <hr class="mt-5 mb-4 border-secondary-subtle">
+              <div class="col-12">
+                <p class="m-0 text-secondary text-center">Already have an account? <a href="#" class="link-primary text-decoration-none">Sign in</a></p>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+{% endblock %}
