--- a/freelance_web_app/apps/auth_register_user/templates/register/register_tmpl.html
+++ b/freelance_web_app/apps/auth_register_user/templates/register/register_tmpl.html
@@ -27,7 +27,7 @@
               <div class="col-12">
                 <label for="userName" class="form-label">User Name <span class="text-danger">*</span></label>
                 <input type="email" class="form-control" name="usertName" id="userName" placeholder="User Name" required>
-              </div>  
+              </div>
               <div class="col-12">
                 <label for="email" class="form-label">Email <span class="text-danger">*</span></label>
                 <input type="email" class="form-control" name="email" id="email" placeholder="name@example.com" required>
@@ -39,18 +39,18 @@
                <div class="col-12">
                 <label for="password" class="form-label">Confirm password <span class="text-danger">*</span></label>
                 <input type="password" class="form-control" name="confirm password" id="password" value="" required>
-              </div>  
+              </div>
               <div class="col-12">
               </div>
                <h6 class="mb-2 pb-1">Choose your role: </h6>
                   <div class="form-check form-check-inline">
                       <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="freelancer" id="freelancer" value="freelancer" />
+                        <input class="form-check-input" type="radio" name="role" id="freelancer" value="freelancer" />
                         <label class="form-check-label" for="freelancer">Freelancer</label>
                       </div>
 
                       <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="client" id="client" value="client" />
+                        <input class="form-check-input" type="radio" name="role" id="client" value="client" />
                         <label class="form-check-label" for="client">Client</label>
                       </div>
                   </div>
@@ -79,3 +79,4 @@
   </div>
 </div>
 {% endblock %}
+
