--- a/freelance_web_app/apps/auth_register_user/templates/register/register_tmpl.html
+++ b/freelance_web_app/apps/auth_register_user/templates/register/register_tmpl.html
@@ -15,6 +15,7 @@
           </div>
           <form method="post">
               {% csrf_token %}
+              {{form.as_p}}
             <div class="row gy-3 gy-md-4 overflow-hidden">
               <div class="col-12">
                 <label for="firstName" class="form-label">First Name <span class="text-danger">*</span></label>
