--- a/freelance_web_app/apps/auth_register_user/templates/register/register_tmpl.html
+++ b/freelance_web_app/apps/auth_register_user/templates/register/register_tmpl.html
@@ -19,15 +19,15 @@
             <div class="row gy-3 gy-md-4 overflow-hidden">
               <div class="col-12">
                 <label for="firstName" class="form-label">First Name <span class="text-danger">*</span></label>
-                <input type="email" class="form-control" name="firstName" id="firstName" placeholder="First Name" required>
+                <input type="text" class="form-control" name="firstName" id="firstName" placeholder="First Name" required>
               </div>
               <div class="col-12">
                 <label for="lastName" class="form-label">Last Name <span class="text-danger">*</span></label>
-                <input type="email" class="form-control" name="lastName" id="lastName" placeholder="Last Name" required>
+                <input type="text" class="form-control" name="lastName" id="lastName" placeholder="Last Name" required>
               </div>
               <div class="col-12">
                 <label for="userName" class="form-label">User Name <span class="text-danger">*</span></label>
-                <input type="email" class="form-control" name="usertName" id="userName" placeholder="User Name" required>
+                <input type="text" class="form-control" name="usertName" id="userName" placeholder="User Name" required>
               </div>
               <div class="col-12">
                 <label for="email" class="form-label">Email <span class="text-danger">*</span></label>
