--- a/freelance_web_app/apps/auth_register_user/templates/register/register_tmpl.html
+++ b/freelance_web_app/apps/auth_register_user/templates/register/register_tmpl.html
@@ -15,58 +15,48 @@
           </div>
           <form method="post">
               {% csrf_token %}
-              {{form.as_p}}
+{#              {{form.as_p}}#}
             <div class="row gy-3 gy-md-4 overflow-hidden">
               <div class="col-12">
-                <label for="firstName" class="form-label">First Name <span class="text-danger">*</span></label>
-                <input type="text" class="form-control" name="firstName" id="firstName" placeholder="First Name" required>
+                 {{ form.first_name.label_tag }} <span class="text-danger">*</span>
+                    {{ form.first_name }}
               </div>
               <div class="col-12">
-                <label for="lastName" class="form-label">Last Name <span class="text-danger">*</span></label>
-                <input type="text" class="form-control" name="lastName" id="lastName" placeholder="Last Name" required>
+                 {{ form.last_name.label_tag }} <span class="text-danger">*</span>
+                  {{ form.last_name }}
               </div>
               <div class="col-12">
-                <label for="userName" class="form-label">User Name <span class="text-danger">*</span></label>
-                <input type="text" class="form-control" name="usertName" id="userName" placeholder="User Name" required>
+                {{ form.username.label_tag }}<span class="text-danger">*</span>
+                  {{ form.username }}
               </div>
               <div class="col-12">
-                <label for="email" class="form-label">Email <span class="text-danger">*</span></label>
-                <input type="email" class="form-control" name="email" id="email" placeholder="name@example.com" required>
+                {{ form.email.label_tag }}<span class="text-danger">*</span>
+                    {{ form.email }}
               </div>
               <div class="col-12">
-                <label for="password" class="form-label">Password <span class="text-danger">*</span></label>
-                <input type="password" class="form-control" name="password" id="password" value="" required>
+                {{ form.password1.label_tag }} <span class="text-danger">*</span>
+                  {{ form.password1 }}
               </div>
                <div class="col-12">
-                <label for="password" class="form-label">Confirm password <span class="text-danger">*</span></label>
-                <input type="password" class="form-control" name="confirm password" id="password" value="" required>
+                {{ form.password2.label_tag }} <span class="text-danger">*</span>
+                   {{ form.password2 }}
               </div>
               <div class="col-12">
               </div>
                <h6 class="mb-2 pb-1">Choose your role: </h6>
-                  <div class="form-check form-check-inline">
-                      <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="role" id="freelancer" value="freelancer" />
-                        <label class="form-check-label" for="freelancer">Freelancer</label>
-                      </div>
-
-                      <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="role" id="client" value="client" />
-                        <label class="form-check-label" for="client">Client</label>
-                      </div>
+                    {{ form.choose_role }}
                   </div>
               <div class="col-12">
                 <div class="d-grid">
                   <button class="btn btn-lg btn-primary" type="submit">Sign up</button>
                 </div>
               </div>
-            </div>
           </form>
           <div class="row">
             <div class="col-12">
               <hr class="mt-5 mb-4 border-secondary-subtle">
               <div class="col-12">
-                <p class="m-0 text-secondary text-center">Already have an account? <a href="#" class="link-primary text-decoration-none">Sign in</a></p>
+                <p class="m-0 text-secondary text-center">Already have an account? <a href= '{% url 'login' %}' class="link-primary text-decoration-none">Login</a></p>
               </div>
             </div>
           </div>
