--- a/freelance_web_app/apps/auth_register_user/templates/register_success/success_tmpl.html
+++ b/freelance_web_app/apps/auth_register_user/templates/register_success/success_tmpl.html
@@ -3,9 +3,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
-    <title>Freelance application</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+    <title>Success registration</title>
+     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
     <script src={% static 'js/bootstrap.min.js' %}></script>
 </head>
 <body>
@@ -27,24 +26,11 @@
         <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
           <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
         </form>
-
-        <div class="text-end">
-          <button type="button" class="btn btn-outline-light me-2" onclick="window.location.href='{% url 'login' %}'" >Login</button>
-          <button type="button" class="btn btn-warning" onclick="window.location.href='{% url 'register' %}'">Sign up</button>
-        </div>
       </div>
     </div>
   </header>
-{% block body%}
 
-{% endblock %}
-<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-    <div class="col-md-4 d-flex align-items-center">
-      <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-        <svg class="bi" width="30" height="24"><use href="#bootstrap"></use></svg>
-      </a>
-      <span class="mb-3 mb-md-0 text-muted">© 2022 Company, Inc</span>
-    </div>
-  </footer>
+    <h1><b> Successful registration/login</b></h1>
+
 </body>
 </html>
