--- a/web_application/apps/user/templates/register/register_tmpl.html
+++ b/web_application/apps/user/templates/register/register_tmpl.html
@@ -33,7 +33,8 @@
               <div class="col-12">
                 {{ form.email.label_tag }}<span class="text-danger">*</span>
                     {{ form.email }}
-              </div>
+              </div>from django.conf.global_settings import MEDIA_URL, STATIC_ROOT, MEDIA_ROOT
+
               <div class="col-12">
                 {{ form.password1.label_tag }} <span class="text-danger">*</span>
                   {{ form.password1 }}
