--- a/web_application/apps/user/templates/base/base_tmpl.html
+++ b/web_application/apps/user/templates/base/base_tmpl.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
 
     <title>Freelance application</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
-<script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <link rel="stylesheet" type="text/css" href="{% static "css/bootstrap.min.css" %}">
+<script src="{% static "js/bootstrap.min.js" %}"></script>
 </head>
 <body>
 <header class="p-3 bg-dark text-white">
@@ -36,6 +36,7 @@
     </div>
   </header>
 {% block body%}
+
 
 {% endblock %}
 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
