--- a/web_application/apps/user/templates/base/base_tmpl.html
+++ b/web_application/apps/user/templates/base/base_tmpl.html
@@ -3,10 +3,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
     <title>Freelance application</title>
-    <link rel="stylesheet" type="text/css" href="{% static "css/bootstrap.min.css" %}">
-<script src="{% static "js/bootstrap.min.js" %}"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+    <script src={% static 'js/bootstrap.min.js' %}></script>
 </head>
 <body>
 <header class="p-3 bg-dark text-white">
@@ -37,7 +36,7 @@
   </header>
 {% block body%}
 
-
+    
 {% endblock %}
 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <div class="col-md-4 d-flex align-items-center">
